# locus

./: .SRCINFO  PKGBUILD  README.md  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  model.rs  window_info.rs
src-tauri/src/stream/: stream_utils.rs
src-tauri/src/utils/: stream.rs
src-tauri/src/window_info/: hyprland_window_info.rs  x_window_info.rs
src/components/: Alert.tsx  Chart.tsx  CompatibilityNotice.tsx  DottedBackground.tsx  Indicator.tsx  LoadingScreen.tsx  Timer.tsx
src/components/Chart/: ChartPlaceholder.tsx  PerformaceGraphs.tsx  PerformaceGraphsOld.tsx  index.tsx
src/components/Indicator/: index.tsx
src/components/Settings/: TimerDialog.tsx  index.tsx
src/hooks/: useWindowTitleStream.tsx
src/model/: PomodoroTypes.ts  SessionHistory.ts
src/shadcn/components/ui/: mode-toggle.tsx
src/stores/: chartSizeStore.tsx  settingStore.tsx  streamStore.tsx  timerStore.tsx
src/utils/: utils.ts
